infra/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pt
---
apiVersion: v1
kind: Namespace
metadata:
  name: pt-staging
