infra/geder.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tailnet-fqdn: geder.reindeer-neon.ts.net
  name: geder
spec:
  externalName: placeholder   # any value - will be overwritten by operator
  type: ExternalName
