infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: pt
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - port: 80
      name: http
      targetPort: http
  selector:
    app: api
---
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: pt
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - port: 80
      name: http
      targetPort: admin
  selector:
    app: api
